oauth2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: grinny/hello-world:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          imagePullPolicy: Always
