oauth2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: hello-world
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-world
