oauth2/templates/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-ingress

spec:
  selector:
    name: nginx-ingress-hello-world
  type: LoadBalancer

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://192.168.1.12/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://192.168.1.12/oauth2/start?rd=http://$host$request_uri"
  name: external-auth-oauth2
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /oauth-test
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
spec:
  ingressClassName: public
  rules:
  - http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
